--- a/src/style.css
+++ b/src/style.css
@@ -35,19 +35,98 @@ img {
 }
 
 img:hover {
-    animation: shake 0.5s infinite;
+    animation: shake 0.7s infinite;
 }
 
+#i00:hover, #i11:hover, #i22:hover, #i33:hover, #i44:hover, #i55:hover {
+    animation: diag-rd 0.6s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+#i77:hover, #i88:hover, #i99:hover {
+    animation: diag-lu 0.6s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+} 
+
+#i60:hover, #i61:hover, #i62:hover, #i63:hover, #i64:hover, #i65:hover {
+    animation: h-r 0.6s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+#i67:hover, #i68:hover, #i69:hover {
+    animation: h-l 0.6s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+#i06:hover, #i16:hover, #i26:hover, #i36:hover, #i46:hover, #i56:hover {
+    animation: v-d 0.6s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+#i76:hover, #i86:hover, #i96:hover {
+    animation: v-u 0.6s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+
+@keyframes diag-rd {
+    0% {transform: translate(1px,1px);}
+    25% {transform: translate(2px,2px);}
+    50% {transform: translate(3px,3px);}
+    75% {transform: translate(4px,4px);}
+    100% {transform: translate(5px,5px);}
+}
+@keyframes diag-lu {
+    0% {transform: translate(-1px,-1px);}
+    25% {transform: translate(-2px,-2px);}
+    50% {transform: translate(-3px,-3px);}
+    75% {transform: translate(-4px,-4px);}
+    100% {transform: translate(-5px,-5px);}
+}
+@keyframes v-d {
+    0% {transform: translate( 0px,1px);}
+    25% {transform: translate( 0px,2px);}
+    50% {transform: translate( 0px,3px);}
+    75% {transform: translate( 0px,4px);}
+    100% {transform: translate( 0px,5px);}
+}
+@keyframes v-u {
+    0% {transform: translate( 0px,-1px);}
+    25% {transform: translate( 0px,-2px);}
+    50% {transform: translate( 0px,-3px);}
+    75% {transform: translate( 0px,-4px);}
+    100% {transform: translate( 0px,-5px);}
+}
+@keyframes h-r {
+    0% {transform: translate( 1px, 0px);}
+    25% {transform: translate( 2px, 0px);}
+    50% {transform: translate( 3px, 0px);}
+    75% {transform: translate( 4px, 0px);}
+    100% {transform: translate( 5px, 0px);}
+}
+@keyframes h-l {
+    0% {transform: translate( -1px, 0px);}
+    25% {transform: translate( -2px, 0px);}
+    50% {transform: translate( -3px, 0px);}
+    75% {transform: translate( -4px, 0px);}
+    100% {transform: translate( -5px, 0px);}
+}
 @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
+    0% { transform: translate(1px, 1px); }
+    10% { transform: translate(-1px, -2px); }
+    20% { transform: translate(-3px, 0px); }
+    30% { transform: translate(3px, 2px); }
+    40% { transform: translate(1px, -1px); }
+    50% { transform: translate(-1px, 2px); }
+    60% { transform: translate(-3px, 1px); }
+    70% { transform: translate(3px, 1px); }
+    80% { transform: translate(-1px, -1px); }
+    90% { transform: translate(1px, 2px); }
+    100% { transform: translate(1px, -2px); }
   }
+
