--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,30 @@
+.title{
+    grid-area: title;
+    align-content: center;
+    text-align: center;
+}
+.message1{
+    grid-area: left;
+}
+.message2{
+    grid-area: right;
+}
 .flex-container{
     display:grid;
     align-content: center;
-    gap: 10px 10px;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10% ;
+    gap: 13px 20px;
+    grid-template-columns: 10fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 10fr ;
+    grid-template-areas:'title title title title title title title title title title title title'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right'
+                        'left . . . . . . . . . . right';
 }
 .grid-item{
     border: 2px solid rgba(0, 0, 0, 0.8);
@@ -19,6 +41,7 @@
     animation-iteration-count: infinite;
     animation-timing-function: ease-in;
 }
+
 @keyframes vibrate {
     10%,90%{
         transform: translate3d(-1px, 0, 0);
@@ -39,6 +62,56 @@
         transform: translate3d(-1.5px, 1.5px, 0);
     }
 }
+.message1{
+    grid-area: left;
+    background-color: rgb(255, 255, 255);
+    height: 400px;
+    width: 400px;
+    color: rgb(255, 255, 255);
+    align-content: center;
+    text-align: center;
+}
+.message2{
+    grid-area: right;
+    background-color: rgb(255, 253, 253);
+    height: 400px;
+    width: 400px;
+    color: rgb(255, 255, 255);
+    align-content: center;
+    text-align: center;
+}
+#secret-pebble:active{
+    background-color: black;
+}
+#secret-pebble:active::before{
+    display: flex;
+    content: "I am Pulkit";
+    position: absolute;
+    left: 10em;
+    top:-14em;
+    background-color: hsla(43, 100%, 50%, 0.812);
+    width: 400px;
+    height: 400px;
+    font-size: larger;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+}
+#secret-pebble:active::after{
+    display: flex;
+    content: "Hello";
+    position: absolute;
+    left: -36em;
+    top:-14em;
+    font-size: larger;
+    background-color: rgb(0, 123, 255);
+    width: 400px;
+    height: 400px;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+
 #pebbleupdia:hover{
     background-color: rgb(225, 228, 228);
     box-shadow: 3px 3px 4px black;
